2008-11-25  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.24.3.

==================== 2.24.2 ====================

2008-11-25  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.24.2

2008-10-22  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.24.2.

==================== 2.24.1 ====================

2008-10-22  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.24.1

2008-10-20  Dan Winship  <danw@gnome.org>

	* configure.in: require libgweather 2.24.1 (for
	weather_info_network_error())

2008-09-22  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.24.1.

==================== 2.24.0 ====================

2008-09-22  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.24.0

2008-09-09  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.24.0.

==================== 2.23.92 ====================

2008-09-09  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.23.92

2008-09-02  Vincent Untz  <vuntz@gnome.org>

	* configure.in: fix eds icon detection when forcing eds support

2008-09-02  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.92.

==================== 2.23.91 ====================

2008-09-02  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.23.91

2008-08-21  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.91.

==================== 2.23.90.1 ====================

2008-08-21  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.23.90.1

2008-08-18  Olav Vitters  <olav@bkor.dhs.org>

	* configure.in: post-release bump to 2.23.91.

==================== 2.23.90 ====================

2008-08-18  Olav Vitters  <olav@bkor.dhs.org>

	* NEWS:
	* README:
	* configure.in: version 2.23.90.

2008-08-04  Vincent Untz  <vuntz@gnome.org>
