@@ -51,7 +51,7 @@ AC_CHECK_FUNCS(_NSGetEnviron)
 LIBGNOME_DESKTOP_REQUIRED=2.11.1
 GDK_PIXBUF_REQUIRED=2.7.1
 PANGO_REQUIRED=1.15.4
-GLIB_REQUIRED=2.15.6
+GLIB_REQUIRED=2.18.0
 GTK_REQUIRED=2.13.1
 LIBGLADE_REQUIRED=2.5.0
 LIBGNOME_REQUIRED=2.13.0
