@@ -124,10 +124,10 @@ typedef struct {
 } OrientationComboItem;
 
 static OrientationComboItem orientation_items [] = {
-	{ N_("Orientation|Top"),    PANEL_ORIENTATION_TOP    },
-	{ N_("Orientation|Bottom"), PANEL_ORIENTATION_BOTTOM },
-	{ N_("Orientation|Left"),   PANEL_ORIENTATION_LEFT   },
-	{ N_("Orientation|Right"),  PANEL_ORIENTATION_RIGHT  }
+	{ NC_("Orientation", "Top"),    PANEL_ORIENTATION_TOP    },
+	{ NC_("Orientation", "Bottom"), PANEL_ORIENTATION_BOTTOM },
+	{ NC_("Orientation", "Left"),   PANEL_ORIENTATION_LEFT   },
+	{ NC_("Orientation", "Right"),  PANEL_ORIENTATION_RIGHT  }
 };
 
 static void
@@ -179,7 +179,7 @@ panel_properties_dialog_setup_orientation_combo (PanelPropertiesDialog *dialog,
 	for (i = 0; i < G_N_ELEMENTS (orientation_items); i++) {
 		gtk_list_store_append (model, &iter);
 		gtk_list_store_set (model, &iter,
-				    COLUMN_TEXT, Q_(orientation_items [i].name),
+				    COLUMN_TEXT, g_dpgettext2 (NULL, "Orientation", orientation_items [i].name),
 				    COLUMN_ITEM, &(orientation_items [i]),
 				    -1);
 		if (orientation == orientation_items [i].orientation)
