@@ -1,3 +1,10 @@
+2008-12-08  Vincent Untz  <vuntz@gnome.org>
+
+	* panel-test-applets.c: (setup_combo), (setup_options): use NC_() and
+	then g_dpgettext2() instead of Q_()
+	Based on patch by Philip Withnall <bugzilla@tecnocode.co.uk>
+	Fix bug #558418, part of a GNOME Goal.
+
 ==================== 2.24.2 ====================
 
 2008-11-09  Vincent Untz  <vuntz@gnome.org>
