@@ -1,3 +1,8 @@
+2008-12-08  Vincent Untz  <vuntz@gnome.org>
+
+	* configure.in: require glib 2.18.0 for C_().
+	Fix bug #558418, part of a GNOME Goal.
+
 2008-11-25  Vincent Untz  <vuntz@gnome.org>
 
 	* configure.in: post-release bump to 2.24.3.
